2002-10-01  Peter Osterlund  <petero2@telia.com>

	* (p4-blame-int): Use correct filename when initializing the
	  "p4-ch-buf" buffer.

	* (p4-font-lock-buffer): Made fontification more robust. Some
	  versions of emacs failed if you tricked them to fontify a binary
	  file.

2002-09-29  Peter Osterlund  <petero2@telia.com>

	* (p4-find-change-numbers): Handle the case "submit @1234" when
	  searching for change numbers in change descriptions.

2002-09-24  Peter Osterlund  <petero2@telia.com>

	* p4.el.html: Added documentation for the different key maps used
	  by p4.el.

	* (p4-font-lock-buffer): Fixed problem with delays when pressing
	  C-l caused by hilit19 unnecessarily trying to rehighlight the
	  buffer.

2002-09-23  Peter Osterlund  <petero2@telia.com>

	* (p4-font-lock-buffer): New function. Colorize a buffer using
	  font-lock mode.
	* (p4-activate-print-buffer): Use p4-font-lock-buffer.
	* (p4-print-with-rev-history-int): Use p4-font-lock-buffer.

2002-09-22  Peter Osterlund  <petero2@telia.com>

	* (p4-print-with-rev-history-int): Fixed misaligned header text.

	* (p4-print-rev-map): Add 'l' key to toggle line wrap mode.
	* (p4-print-with-rev-history-int): Default to line wrap mode off.
	* (p4-toggle-line-wrap): New function to toggle line wrap mode.

	* (p4-print-with-rev-history-int): Colorize the buffer contents
	  using font-lock mode.
	* (p4-insert-no-properties): New function.

	* (p4-resolve): If you switched directory to a different depot,
	  p4-resolve didn't work until you manually killed the
	  *p4 resolve* buffer.

	* (p4-print-with-rev-history-int): Tiny optimization. Only compute
	  variable values if they are going to be used.

2002-09-07  Peter Osterlund  <petero2@telia.com>

	* (p4-print-with-rev-history-int): Truncate long user names.

2002-08-29  Peter Osterlund  <petero2@telia.com>

	* (p4-toggle-read-only): Updated docstring to match new "C-xC-q"
	  handling from 2002-08-25.
